--- a/_posts/2020-10-18-luxury.markdown
+++ b/_posts/2020-10-18-luxury.markdown
@@ -5,11 +5,13 @@ date:   2020-10-18 00:35:00 -0400
 categories: jekyll update
 ---
 
-Gucci bag -- 5k, Hermes belt -- 1k, Cartier watch 20k. Even the cheapest item
-at a luxury shop, usually a cardholder, will run you $300. For many of us,
-buying luxury can make ourselves feel more confident, and give a baller
-impression to our friends. But is taking out a month's salary really worth
-it...there must be cheaper luxury options right?
+Gucci belt -- 40, Prada clutch -- 200, Burberry Trench -- 700. Wrong?
+Well...kinda. These are real item prices, but there's a catch for how they
+became so cheap. Normally, even the cheapest item at a luxury shop, usually a
+cardholder, will run you $300. For many of us, buying luxury can make
+ourselves feel more confident, and give a baller impression to our friends.
+But is taking out a month's salary really worth it...there must be cheaper
+luxury options right?
 
 Besides picking up items from the dump or getting hand-me-downs, there are
 actually several pretty legitimate and legal ways to get luxury for cheap.
