--- a/_posts/2020-10-09-goals.markdown
+++ b/_posts/2020-10-09-goals.markdown
@@ -18,7 +18,7 @@ where we sell our merch.
 
 ## Finance
 
-- [`marco`](https://mikinty.github.io/marco): Technical analysis for crypto. Plan is to automatically perform real-time TA.
+- [`marco`](https://mikinty.github.io/btc-marco): Technical analysis for crypto. Plan is to automatically perform real-time TA.
 - [`theta`](https://viriditycapital.github.io/theta): Tool to help options sellers manage risk. Plan is to make more visuals regarding risk and options selling. Would also be nice to expand the tool to be able to work with spreads.
 - [Trading Interview Questions](https://github.com/mikinty/Trading-Interview-Questions): Interview prep for aspiring traders/quants. Plans are to create interactive games on the browser to practice, and also more interview questions.
 - [Wealth Management](https://github.com/mikinty/Wealth-Management): How to manage your money, with varying degrees of risk and return. **WIP**
